--- a/addon/background/background.html
+++ b/addon/background/background.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>YAAI</title>
-    <script type="module" src="./background.js"></script>
+    <script type="module" src="./index.js"></script>
 </head>
 
 </html>
